--- a/web/themes/custom/my_theme/templates/layout/page.html.twig
+++ b/web/themes/custom/my_theme/templates/layout/page.html.twig
@@ -1,5 +1,17 @@
 <div class="layout-container">
-  <header>{{ page.header }}</header>
-  <main>{{ page.content }}</main>
-  <footer>{{ page.footer }}</footer>
+  <header>
+    <div class="container">
+        {{ page.header }}
+    </div>    
+  </header>
+  <main>
+    <div class="container">
+        {{ page.content }}
+    </div>    
+  </main>
+  <footer>
+    <div class="container">
+        {{ page.footer }}
+    </div>   
+  </footer>
 </div>
