fix layout styles

--- a/web/themes/custom/my_theme/assets/scss/layout/_main.scss
+++ b/web/themes/custom/my_theme/assets/scss/layout/_main.scss
@@ -2,7 +2,8 @@ main {
     .region--content {
         min-height: 400px;
         width: 100%;
-        margin: 0;
+        padding: 20px 0;
+        margin: 40px 0;
         background-color: $light;
     }
 }
