--- a/web/themes/custom/my_theme/assets/scss/layout/_heder.scss
+++ b/web/themes/custom/my_theme/assets/scss/layout/_heder.scss
@@ -23,7 +23,7 @@ header {
             display: flex;
 
             .menu__item {
-                margin: 0 10px;
+                margin-left: 10px;
 
                 .menu__link--link {
                     color: $light;
