implementation react into theme

--- a/web/themes/custom/my_theme/templates/layout/page.html.twig
+++ b/web/themes/custom/my_theme/templates/layout/page.html.twig
@@ -1,17 +1,17 @@
 <div class="layout-container">
   <header>
     <div class="container">
-        {{ page.header }}
+      {{ page.header }}
     </div>    
   </header>
   <main>
     <div class="container">
-        {{ page.content }}
+      <div id="root"></div>
     </div>    
   </main>
   <footer>
     <div class="container">
-        {{ page.footer }}
+      {{ page.footer }}
     </div>   
   </footer>
 </div>
