fix tpahe.html template

--- a/web/themes/custom/my_theme/templates/layout/page.html.twig
+++ b/web/themes/custom/my_theme/templates/layout/page.html.twig
@@ -6,7 +6,11 @@
   </header>
   <main>
     <div class="container">
+    {% if page.content.system_main['#title'] == null %}
       <div id="root"></div>
+    {% else %}
+      {{page.content}}      
+    {% endif %}
     </div>    
   </main>
   <footer>
