fix tpahe.html template

--- a/web/themes/custom/my_theme/assets/scss/style.scss
+++ b/web/themes/custom/my_theme/assets/scss/style.scss
@@ -3,6 +3,7 @@
 @import './variables/variables';
 @import './variables/mixins';
 
+@import './drupal_system/styles';
 @import './layout/layout';
 @import './layout/heder';
 @import './layout/main';
