--- a/web/themes/custom/my_theme/react_app/src/App/App.module.scss
+++ b/web/themes/custom/my_theme/react_app/src/App/App.module.scss
@@ -1,7 +1,6 @@
-
 .content_wrapper {
-  background-color: #282c34;
-  min-height: 400px;
+  // background-color: #282c34;
+  // min-height: 400px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,23 +8,7 @@
   color: white;
   text-align: center;
   padding: 20px 40px;
-  margin: 40px 0;
-
-  .text {
-    margin-bottom: 20px !important;
-  }
-
-  .headding {
-    color: #0d77b5;
-  }
-  
-  .link {
-    color: #0d77b5;
-
-    &:hover {
-      color: lighten($color: #0d77b5, $amount: 10%);
-    }
-  }
+  margin: 40px 0;  
 }
 
 
