add pages react app

--- a/web/themes/custom/my_theme/assets/scss/layout/_heder.scss
+++ b/web/themes/custom/my_theme/assets/scss/layout/_heder.scss
@@ -8,6 +8,10 @@ header {
         align-items: center;
         justify-content: space-between;
 
+        .header_navigation {
+            display: flex;
+        }
+
         #block-my-theme-site-branding {
             padding: 0;
             margin: 0;
