--- a/web/themes/custom/my_theme/assets/scss/style.scss
+++ b/web/themes/custom/my_theme/assets/scss/style.scss
@@ -9,6 +9,7 @@
 @import './layout/main';
 @import './layout/footer';
 
+@import './components/nodes/front_page';
 @import './components/nodes/article';
 
 @import './components/paragraphs/image';
