--- a/web/themes/custom/my_theme/assets/scss/layout/_heder.scss
+++ b/web/themes/custom/my_theme/assets/scss/layout/_heder.scss
@@ -31,6 +31,26 @@ header {
 
                 .menu__link--link {
                     color: $light;
+                    position: relative;
+
+                    &::before {
+                        content: '';
+                        position: absolute;
+                        width: 100%;
+                        height: 1px;
+                        border-radius: 4px;
+                        background-color: $light;
+                        bottom: -4px;
+                        left: 0;
+                        transform-origin: right;
+                        transform: scaleX(0);
+                        transition: transform .3s ease-in-out;
+                    }
+
+                    &:hover::before {
+                        transform-origin: left;
+                        transform: scaleX(1);
+                    }
                 }
             }            
         }
