--- a/web/themes/custom/my_theme/assets/scss/style.scss
+++ b/web/themes/custom/my_theme/assets/scss/style.scss
@@ -26,7 +26,7 @@
 
 body {
     background-color: rgba($color: $gold, $alpha: .7);
-    background-color: red !important;
+    background-color: green !important;
 }
 
 h1{@include adaptiv-font(46, 28);}
